상품 주문시 수량 감소 동시성 내부락 및 쿠폰 발급 시 내부 및 외부락으로 2중락 구현, 엔티티에서 필요없는 필드 삭제, 주문에서 동시성 이슈되는 코드 수정